# vcc-cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  dist-workspace.toml  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml
src/: main.rs
src/adapter/: agent_format.rs  doc_engine.rs  mapping.rs  mod.rs  plugin_manifest.rs
src/adapter/generic/: crud.rs  helpers.rs  mod.rs
src/adapter/provider/: mod.rs
src/cli/: apply_cmd.rs  config_cmd.rs  dynamic.rs  import.rs  inspect_cmd.rs  mod.rs  output.rs  presets.rs  profile.rs  resource.rs  session_cmd.rs  status.rs
src/config/: adapter_defaults.toml  hash_fields.toml  mod.rs  models.rs  presets.toml  resource_registry.toml
src/config/adapter_mappings/: aider.toml  amp.toml  claude.toml  codex.toml  copilot.toml  crush.toml  cursor.toml  droid.toml  gemini.toml  hermes.toml  kilo.toml  kilocode.toml  kimi.toml  mux.toml  openclaw.toml  opencode.toml  pi.toml  qwen.toml  roocode.toml
src/config/datasource_mappings/: cc-switch.toml  cherry-studio.toml
src/datasource/: ccswitch.rs  cherry_studio.rs  datasource_config.rs  mod.rs
src/model/: hash_fields.rs  mod.rs
src/session/: cache.rs  claude.rs  codex.rs  cursor.rs  json_generic.rs  jsonl_generic.rs  kimi.rs  mod.rs  model.rs  rookilo.rs  sqlite_generic.rs  test_sonic.rs
src/store/: mod.rs  toml_store.rs
